--- a/Reporting/Software/SW Installed by Computer or Publisher/SW Installed Software by Computer or Publisher.rdl
+++ b/Reporting/Software/SW Installed by Computer or Publisher/SW Installed Software by Computer or Publisher.rdl
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Report xmlns="http://schemas.microsoft.com/sqlserver/reporting/2016/01/reportdefinition" xmlns:rd="http://schemas.microsoft.com/SQLServer/reporting/reportdesigner" xmlns:cl="http://schemas.microsoft.com/sqlserver/reporting/2010/01/componentdefinition">
-  <Description>Lists installed software by computer or publisher. Wildcard characters and comma separated values are supported. Supported wildcards: '%', '[]', '_'. Example: Like = 'Adobe%,7-zip%'; NotLike = 'Adobe Acrobat [1-8]%,WinZip%,%Fran_aise%'. Don't abuse wildcards, they are very resource intensive.</Description>
+  <Description>Lists installed software by computer or publisher. Supports filtering and exclusions by multiple software names using comma separated values and wildcards. Supported wildcards: '%', '[]', '_'. Example: Like = 'Adobe%,7-zip%'; NotLike = 'Adobe Acrobat [1-8]%,WinZip%,%Fran_aise%'. Don't abuse wildcards, they are very resource intensive.</Description>
   <AutoRefresh>0</AutoRefresh>
   <DataSources>
     <DataSource Name="CMSQLDatabase">
