Updated to support SQL 2019

--- a/Reporting/Software/SW SQL Server Products/SW SQL Server Products.rdl
+++ b/Reporting/Software/SW SQL Server Products/SW SQL Server Products.rdl
@@ -79,11 +79,13 @@ ORDER BY
     Gets SQL product info, id and product key.
 .NOTES
     Created by Ioan Popovici.
-    Requires the usp_PivotWithDynamicColumns stored procedure.
+    Requires the usp_PivotWithDynamicColumns stored procedure (SQL Support Functions).
     Requires SQL Property and ProductID HWI extensions.
     Part of a report should not be run separately.
 .LINK
     https://SCCM.Zone/SW-SQL-Server-Products
+.LINK
+    https://SCCM.Zone/SQL-SupportFunctions
 .LINK
     https://SCCM.Zone/SW-SQL-Server-Products-CHANGELOG
 .LINK
@@ -98,9 +100,9 @@ ORDER BY
 /* #region QueryBody */
 
 /* Test variable declaration !! Need to be commented for Production !! */
---DECLARE @UserSIDs          AS NVARCHAR(10) = 'Disabled';
---DECLARE @CollectionID      AS NVARCHAR(10) = 'SMS00001';
---DECLARE @Filter            AS NVARCHAR(20) = 'WID';
+-- DECLARE @UserSIDs          AS NVARCHAR(10) = 'Disabled';
+-- DECLARE @CollectionID      AS NVARCHAR(10) = 'SMS00001';
+-- DECLARE @Filter            AS NVARCHAR(20) = 'WID';
 
 /* Variable declaration */
 DECLARE @TableName         AS NVARCHAR(MAX);
@@ -133,7 +135,8 @@ SET @StaticColumnList = N'[SKUNAME],[VERSION],[FILEVERSION],[SPLEVEL],[CLUSTERED
 /* Populate SQLRelease table */
 INSERT INTO @SQLRelease (FileVersion, Release)
 VALUES
-    ('2017', '2017')
+    ('2019', '2019')
+    , ('2017', '2017')
     , ('2016', '2017')
     , ('2015', '2016')
     , ('2014', '2014')
@@ -146,6 +149,15 @@ VALUES
     , ('2005', '2005')
     , ('2000', '2000')
     , ('',     'Unknown')
+
+/* Get SQL 2019 data */
+INSERT INTO #SQLProducts
+EXECUTE dbo.usp_PivotWithDynamicColumns
+    @TableName           = N'dbo.v_GS_EXT_SQL_2019_Property0'
+    , @NonPivotedColumn  = N'ResourceID'
+    , @DynamicColumn     = N'PropertyName0'
+    , @AggregationColumn = N'ISNULL(PropertyStrValue0, PropertyNumValue0)'
+	, @StaticColumnList  = @StaticColumnList;
 
 /* Get SQL 2017 data */
 INSERT INTO #SQLProducts
