--- a/Reporting/Software/SW SQL Server Products/SW SQL Server Products.rdl
+++ b/Reporting/Software/SW SQL Server Products/SW SQL Server Products.rdl
@@ -374,16 +374,24 @@ IF OBJECT_ID('tempdb..#SQLProducts', 'U') IS NOT NULL
           <DataField>Version</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
-        <Field Name="CUVersion">
-          <DataField>CUVersion</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
-        </Field>
         <Field Name="ServicePack">
           <DataField>ServicePack</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
+        <Field Name="CUVersion">
+          <DataField>CUVersion</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="IsClustered">
+          <DataField>IsClustered</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
         <Field Name="Bitness">
           <DataField>Bitness</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="CEIPReporting">
+          <DataField>CEIPReporting</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
         <Field Name="ProductKey">
@@ -417,14 +425,6 @@ IF OBJECT_ID('tempdb..#SQLProducts', 'U') IS NOT NULL
         <Field Name="LogicalCores">
           <DataField>LogicalCores</DataField>
           <rd:TypeName>System.Int32</rd:TypeName>
-        </Field>
-        <Field Name="IsClustered">
-          <DataField>IsClustered</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
-        </Field>
-        <Field Name="CEIPReporting">
-          <DataField>CEIPReporting</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
         </Field>
       </Fields>
     </DataSet>
@@ -4006,7 +4006,7 @@ IF OBJECT_ID('tempdb..#SQLProducts', 'U') IS NOT NULL
                                                                       <Paragraph>
                                                                         <TextRuns>
                                                                           <TextRun>
-                                                                            <Value>=IIF(Parameters!HideProductKey.Value = false, Code.GetSQLProductKey(Split(Replace(Fields!ProductKey.Value, " ",""), ","), Left(Fields!Version.Value, 2)), "Hidden")</Value>
+                                                                            <Value>=IIF(Fields!EditionGroup.Value &lt;&gt; "Express", IIF(Parameters!HideProductKey.Value = false, Code.GetSQLProductKey(Split(Replace(Fields!ProductKey.Value, " ",""), ","), Left(Fields!Version.Value, 2)), "Hidden"), Nothing)</Value>
                                                                             <Style>
                                                                               <FontFamily>Segoe UI</FontFamily>
                                                                               <FontSize>9pt</FontSize>
@@ -4943,6 +4943,6 @@ End Function
     <CodeModule>SrsResources, Culture=neutral</CodeModule>
   </CodeModules>
   <rd:ReportUnitType>Cm</rd:ReportUnitType>
-  <rd:ReportServerUrl></rd:ReportServerUrl>
+  <rd:ReportServerUrl>http://ulb-cm-sql-01a/ReportServer</rd:ReportServerUrl>
   <rd:ReportID>6fbd236a-d836-4950-8788-14b828deb616</rd:ReportID>
 </Report>
